objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Course</fullName>
                </value>
                <value>
                    <fullName>In-House Training</fullName>
                </value>
                <value>
                    <fullName>Negotiation Advice</fullName>
                </value>
                <value>
                    <fullName>Organization Transformation</fullName>
                </value>
                <value>
                    <fullName>Joining ENSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Indemnity_Amount__c</fullName>
        <inlineHelpText>Amount insured for</inlineHelpText>
        <label>Professional Indemnity Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Indemnity_Expiry_Date__c</fullName>
        <label>Professional Indemnity Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Professional_Indemnity_Insurance_Company__c</fullName>
        <label>Professional Indemnity Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Indemnity_Policy_No__c</fullName>
        <label>Professional Indemnity Policy No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Memberships__c</fullName>
        <label>Professional Memberships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Last_Job_ID__r.Program_Name__c</formula>
        <label>Job Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the box is ticked they DO receive promotional emails
(You must have permission from person to send Negotium)</inlineHelpText>
        <label>Promo Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Amount__c</fullName>
        <label>Public Liability Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Expiry_Date__c</fullName>
        <label>Public Liability Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Insurance_Company__c</fullName>
        <label>Public Liability Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Policy_No__c</fullName>
        <label>Public Liability Policy No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Program__c</fullName>
        <description>Used in the Lead Management area to record which public program a contact has asked about. You can select multiple options</description>
        <inlineHelpText>Select which program the contact has inquired about. You can select multiple options</inlineHelpText>
        <label>ENS Lead Public Program Inquiry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia - All</fullName>
                </value>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
                <value>
                    <fullName>Brisbane - Level 1</fullName>
                </value>
                <value>
                    <fullName>Brisbane - Level 2</fullName>
                </value>
                <value>
                    <fullName>Brisbane - Level 3</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canberra - Level 1</fullName>
                </value>
                <value>
                    <fullName>Canberra - Level 2</fullName>
                </value>
                <value>
                    <fullName>Canberra - Level 3</fullName>
                </value>
                <value>
                    <fullName>Darwin</fullName>
                </value>
                <value>
                    <fullName>Hobart</fullName>
                </value>
                <value>
                    <fullName>Melbourne - Level 1</fullName>
                </value>
                <value>
                    <fullName>Melbourne - Level 2</fullName>
                </value>
                <value>
                    <fullName>Melbourne - Level 3</fullName>
                </value>
                <value>
                    <fullName>Newcastle</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Perth - Level 1</fullName>
                </value>
                <value>
                    <fullName>Perth - Level 2</fullName>
                </value>
                <value>
                    <fullName>Perth - Level 3</fullName>
                </value>
                <value>
                    <fullName>SE Asia</fullName>
                </value>
                <value>
                    <fullName>Sydney - Level 1</fullName>
                </value>
                <value>
                    <fullName>Sydney - Level 2</fullName>
                </value>
                <value>
                    <fullName>Sydney - Level 3</fullName>
                </value>
                <value>
                    <fullName>Townsville</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_A__c</fullName>
        <inlineHelpText>The Record Type A field from FMPro. This has been mapped to the Salesforce Record Types for all but person accounts.</inlineHelpText>
        <label>Record Type A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <inlineHelpText>Select region of contact</inlineHelpText>
        <label>(deprecated) Region Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>ASEAN (Brunei-Cambodia-Indonesia-Laos-Malaysia-Myanmar-Philippines-Singapore-Thailand-Vietnam)</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                    <default>true</default>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>Europe (ex UK)</fullName>
                </value>
                <value>
                    <fullName>HK/China</fullName>
                </value>
                <value>
                    <fullName>India/Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Oceania / Pacific</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South East Asia (ex ASEAN)</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Select region of contact</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinforcement_Emails__c</fullName>
        <label>Reinforcement Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <description>Flags whether reported on</description>
        <inlineHelpText>Select YES if this person is to be reported on in activity reports.</inlineHelpText>
        <label>Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_lead_source__c</fullName>
        <label>Secondary lead source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Secondary_lead_source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sell_1_for_this_NAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sell 1 for this NAM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ENSi Employee, Network Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Sell 1 for this NAM)</relationshipLabel>
        <relationshipName>Contacts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Job_Email__c</fullName>
        <description>A hidden field used to tell Pardot to send a particular email.</description>
        <label>Send Job Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_In_Number__c</fullName>
        <label>Skype In Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_Job_Requirements__c</fullName>
        <label>Special Job Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Materials__c</fullName>
        <label>Special Materials</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriptions_Email_Address__c</fullName>
        <description>Email address to send Negotium or Promo emails to. May be different to the work address.</description>
        <externalId>true</externalId>
        <inlineHelpText>Email address to send Negotium or Promo emails to. May be different to the work address.</inlineHelpText>
        <label>Subscriptions Email Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select who is responsible for following up with this contact. Person must exist in database.</inlineHelpText>
        <label>ENS Lead Responsibility</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ENSCampaign Responsibilities</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Three_Month_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Three Month Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <description>Used to update the record, without altering data, to fire related processes</description>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trainer_Agreement_Signed__c</fullName>
        <inlineHelpText>enter the date the trainer agreement was signed for either the CDP or WLD</inlineHelpText>
        <label>Trainer Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Licencee</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Client Staff</fullName>
                </value>
                <value>
                    <fullName>ENS Staff</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_Requirements__c</fullName>
        <label>Venue Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WLD_Certificate_Awarded__c</fullName>
        <inlineHelpText>Check the box when a WLD certificate has been awarded</inlineHelpText>
        <label>WLD Accreditation Certificate Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WLD_Date__c</fullName>
        <inlineHelpText>Enter the first date of the WLD</inlineHelpText>
        <label>WLD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WLD_Master_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WLD Master Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (WLD Master Trainer)</relationshipLabel>
        <relationshipName>Contacts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>Consultant Websites</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_their_external_business_does__c</fullName>
        <label>What their external business does</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workers_Compensation_Expiry_Date__c</fullName>
        <label>Workers Compensation Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workers_Compensation_Insurance_Company__c</fullName>
        <label>Workers Compensation Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workers_Compensation_Policy_No__c</fullName>
        <label>Workers Compensation Policy No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Preferred_Contact_Method__c</fullName>
        <inlineHelpText>Select the Contacts first contact preference</inlineHelpText>
        <label>1st Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Preferred_Contact_Method__c</fullName>
        <inlineHelpText>Select the Contacts 2nd Preferred Contact Method</inlineHelpText>
        <label>2nd Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eBites_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eBites included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eNews__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if part of ENS network.</inlineHelpText>
        <label>eNews</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Used for a Contact of an Account or Customer attending Open Course</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ENSi_Employee</fullName>
        <active>true</active>
        <description>People employed by ENS</description>
        <label>ENSi Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_House_Trainer</fullName>
        <active>true</active>
        <label>In-House Trainer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Member</fullName>
        <active>true</active>
        <label>Network Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ENSCampaign_Closed_Gatekeeper</fullName>
        <active>false</active>
        <description>If Closed due to &apos;Blocked by Gatekeeper&apos; then must specify who the gatekeeper is.</description>
        <errorConditionFormula>AND (
            ISPICKVAL( ENSCampaign_Closed_Reason__c , &quot;Blocked by Gatekeeper&quot;) 
            , OR (
                          ISNULL ( ENSCampaign_Gatekeeper_Name__c )
                          , LEN (ENSCampaign_Gatekeeper_Name__c) = 0
                     )
         )</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Gatekeeper_Name__c</errorDisplayField>
        <errorMessage>Please specify the Contact who was the Gatekeeper (usually PA) who blocked access.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSCampaign_Closed_Opportunity</fullName>
        <active>false</active>
        <description>Ensures the ENSOpportunity (ie Job) Reference is entered if participation was closed due to creation of an Opportunity.</description>
        <errorConditionFormula>AND (ISPICKVAL( ENSCampaign_Closed_Reason__c , &quot;Public Program Registration&quot;) 
, OR (ISBLANK( ENSCampaign_Opportunity_ID__c ) 
, LEN(ENSCampaign_Opportunity_ID__c ) =0) 
)</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Opportunity_ID__c</errorDisplayField>
        <errorMessage>Please identify the Opportunity Number (i.e. Job Number) of the new opportunity created as a result of contact with this person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSCampaign_Closed_Opportunity_OppCreate</fullName>
        <active>false</active>
        <description>Ensures the ENSOpportunity (ie Job) Reference is entered if participation was closed due to creation of an Opportunity.</description>
        <errorConditionFormula>AND (ISPICKVAL( ENSCampaign_Closed_Reason__c , &quot;Opportunity Created&quot;) 
, OR (ISBLANK( ENSCampaign_Opportunity_ID__c ) 
, LEN(ENSCampaign_Opportunity_ID__c ) =0) 
)</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Opportunity_ID__c</errorDisplayField>
        <errorMessage>Please identify the Opportunity Number (i.e. Job Number) of the new opportunity created as a result of contact with this person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSCampaign_Closed_Reason</fullName>
        <active>false</active>
        <description>If Closed, ensures a reason is specified.</description>
        <errorConditionFormula>AND (
             ISPICKVAL( ENSCampaign_Status__c , &quot;Closed&quot;)
            ,CASE( ENSCampaign_Closed_Reason__c 
                      , &quot;Could Not Contact&quot;, &quot;Could Not Contact&quot;
                      , &quot;Left / Moved&quot;,&quot;Left / Moved&quot;
                      , &quot;No Interest&quot;,&quot;No Interest&quot;
                      , &quot;Meeting Held - No Interest&quot;,&quot;Meeting Held - No Interest&quot;
                      , &quot;Blocked by Gatekeeper&quot;,&quot;Blocked by Gatekeeper&quot;
                      , &quot;Referral(s) Provided&quot;,&quot;Referral(s) Provided&quot;
                      , &quot;Opportunity Created&quot;,&quot;Opportunity Created&quot;
                      , &quot;Public Program Registration&quot;,&quot;Public Program Registration&quot;
                      , &quot;Not Contacted&quot;,&quot;Not Contacted&quot;
                      , &quot;Follow Up as Suspect&quot;,&quot;Follow Up as Suspect&quot;
                      , &quot;Abandoned&quot;,&quot;Abandoned&quot;
,&quot;Price too high&quot;,&quot;Price too high&quot;
,&quot;Competitor&quot;,&quot;Competitor&quot;
                      ,&quot;BLANK&quot;) 
                                = &quot;BLANK&quot;
         )</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Closed_Reason__c</errorDisplayField>
        <errorMessage>You must enter a reason for closing the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSCampaign_Deferred</fullName>
        <active>false</active>
        <description>Ensures date specified if Status = Deferred Contact</description>
        <errorConditionFormula>AND (
                ISPICKVAL(ENSCampaign_Status__c , &quot;Deferred Contact&quot;)
               , ISNULL( ENSCampaign_Next_Contact__c ) 
         )</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Next_Contact__c</errorDisplayField>
        <errorMessage>Please specify the date by which this person is expecting contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSCampaign_Referral</fullName>
        <active>false</active>
        <description>Ensures referral field not blank if source is shown as referrer</description>
        <errorConditionFormula>AND (ISPICKVAL( ENSCampaign_Source__c , &quot;Referral&quot;)
          ,  OR (ISNULL( ENSCampaign_Referred_By__c )
                          ,  LEN(ENSCampaign_Referred_By__c ) =0)
          )</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Referred_By__c</errorDisplayField>
        <errorMessage>You have specified that this person was referred into this ENSCampaign.
Please identify who referred this person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSLEAD_Passed_to_Network</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( ENSCampaign_Status__c ,&quot;Passed to a Network Member&quot;) 
,
  NOT( ENS_Lead_Passed_to_Network__c ) 
)</errorConditionFormula>
        <errorDisplayField>ENS_Lead_Passed_to_Network__c</errorDisplayField>
        <errorMessage>Tick Passed to Network</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENSLEAD_Passed_to_a_BDM</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( ENSCampaign_Status__c ,&quot;Passed to a BDM&quot;) 
,
  NOT(ENS_Lead_Passed_to_a_BDM__c) 
)</errorConditionFormula>
        <errorDisplayField>ENS_Lead_Passed_to_a_BDM__c</errorDisplayField>
        <errorMessage>Tick Passed to a BDM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ENS_Lead_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND (CONTAINS(Target_Responsibility__c,&quot;0032000000JHXjn&quot;)
, OR ( ISPICKVAL(ENSCampaign_Status__c,&quot; &quot;)
))</errorConditionFormula>
        <errorDisplayField>ENSCampaign_Status__c</errorDisplayField>
        <errorMessage>Enter a lead status</errorMessage>
    </validationRules>
</CustomObject>